--- a/sass/home/Home.css
+++ b/sass/home/Home.css
@@ -27,89 +27,165 @@
   justify-content: space-around;
   align-items: center;
   height: 100%;
-  margin: 100px 70px 0px 70px;
+  margin: 130px 70px 0px 70px;
 }
 .home-main-div {
-  padding: 60px 0 0 0;
+  position: relative;
+  padding: 0 0 0 0;
+  width: 40px;
 }
-.home-main-div-i {
+.home-main-div-page {
+  animation: div 1s linear 0s 1 alternate;
+  position: absolute;
+  top: -120px;
+}
+.home-main-div-page-i {
   padding: 20px;
 }
-.home-main-div-i i {
+.home-main-div-page-i i {
   font-size: 25px;
 }
 .home-main-center {
+  width: 500px;
+  position: relative;
+  height: 300px;
+}
+.home-main-center-page {
   width: 500px;
   display: flex;
   justify-content: space-around;
   flex-direction: column;
   height: 300px;
+  top: 0px;
 }
-.home-main-center-div {
+.home-main-center-page-div {
   display: flex;
   justify-content: space-around;
   height: 20px;
   align-items: center;
   width: 300px;
 }
-.home-main-center-div-div {
+.home-main-center-page-div-div {
+  position: absolute;
+  top: 149px;
+  left: 0px;
   width: 70px;
   height: 2px;
   background: #272727;
+  animation: div_one 1s linear 1s alternate;
 }
-.home-main-center-div p {
+.home-main-center-page-div .div-p {
+  position: absolute;
+  top: 138px;
+  left: 93px;
   margin: 0px 20px 0 0;
+  animation: div-p 1s linear 1s alternate;
 }
-.home-main-center h1 {
+.home-main-center-page h1 {
+  position: absolute;
+  top: 0;
+  animation: h1 1s linear 0s alternate;
   font-family: "Nunito", sans-serif;
   font-size: 50px;
 }
-.home-main-center p {
+.home-main-center-page h2 {
+  animation: h2 1s linear 0.5s alternate;
+  position: absolute;
+  top: 65px;
   font-family: "Nunito", sans-serif;
   font-size: 20px;
+  margin: 20px 0 0 0;
+}
+.home-main-center-page .p {
+  animation: p 1s linear 1.5s 1 alternate;
+  position: absolute;
+  top: 160px;
+  font-family: "Nunito", sans-serif;
+  font-size: 20px;
+  margin: 20px 0 0 0;
 }
 .home-main-left {
   padding: 20px 0 0 0;
+  position: relative;
+  width: 450px;
+  height: 300px;
 }
 .home-main-left img {
   width: 450px;
-}
-.home-scroll {
-  padding: 80px 0px 0px 140px;
-  width: 100px;
-  top: 0;
-  position: relative;
-}
-.home-scroll p {
-  rotate: -90deg;
+  top: 0px;
   position: absolute;
-  top: 1px;
-  left: 110px;
-}
-.home-scroll a {
-  color: #272727;
-  position: relative;
-  top: 0;
-  left: 1px;
-  font-size: 25px;
-  animation: myfirst 2s linear 2s infinite alternate;
+  animation: left 1s linear 0s 1 alternate;
+  right: 0;
 }
 
-@keyframes myfirst {
+@keyframes div {
   0% {
-    top: 5px;
-  }
-  25% {
-    top: 10px;
+    left: -30px;
+    opacity: 0;
   }
   50% {
-    top: 20px;
+    left: 0;
+    opacity: 1;
   }
-  75% {
-    top: 10px;
+}
+@keyframes h1 {
+  0% {
+    top: -30px;
+    opacity: 0;
   }
-  100% {
-    top: 0px;
+  50% {
+    top: 0;
+    opacity: 1;
+  }
+}
+@keyframes h2 {
+  0% {
+    top: 95px;
+    opacity: 0;
+  }
+  50% {
+    top: 65px;
+    opacity: 1;
+  }
+}
+@keyframes p {
+  0% {
+    top: 180px;
+    opacity: 0;
+  }
+  50% {
+    top: 160px;
+    opacity: 1;
+  }
+}
+@keyframes div_one {
+  0% {
+    top: 169px;
+    opacity: 0;
+  }
+  50% {
+    top: 149px;
+    opacity: 1;
+  }
+}
+@keyframes div-p {
+  0% {
+    top: 159px;
+    opacity: 0;
+  }
+  50% {
+    top: 138px;
+    opacity: 1;
+  }
+}
+@keyframes left {
+  0% {
+    right: -30px;
+    opacity: 0;
+  }
+  50% {
+    right: 0;
+    opacity: 1;
   }
 }
 @media (max-width: 1600px) {
@@ -122,12 +198,12 @@
     width: 100%;
   }
   .home-main {
-    margin: 100px 70px 0px 70px;
+    margin: 100px 3% 0px 3%;
   }
 }
 @media (max-width: 1100px) {
   .home-main {
-    margin: 100px 40px 0px 40px;
+    margin: 100px 0 0px 0;
   }
 }
 @media (max-width: 1000px) {
@@ -140,7 +216,6 @@
 @media (max-width: 900px) {
   .home-main {
     display: flex;
-    flex-wrap: wrap;
   }
   .home-main-btn {
     margin: 40px 0 0 0;
@@ -148,25 +223,49 @@
 }
 @media (max-width: 615px) {
   .home-main {
-    flex-direction: column-reverse;
-    margin: 3% 0 0 0;
+    margin: 100px 0 0px 0;
+  }
+  .home-main-div {
+    top: 915px;
+    right: 87px;
+  }
+  .home-main-div-page {
+    display: flex;
   }
   .home-main-center {
     width: 100%;
   }
-  .home-main-div {
-    display: flex;
-    padding: 20px 0 0 0;
+  .home-main-center-page {
+    width: 100%;
   }
-}
-@media (max-width: 450px) {
   .home-main-center h1 {
     font-size: 40px;
+  }
+  .home-main-left img {
+    top: 0;
+  }
+}
+@media (max-width: 475px) {
+  .home-main-center {
+    height: 225px;
+  }
+  .home-main-center h1 {
+    font-size: 30px;
+  }
+  .home-main-center p {
+    font-size: 17px;
   }
   .home-main-center-div-div {
     width: 50px;
   }
+  .home-main-center-div p {
+    font-size: 15px;
+  }
+  .home-main-left {
+    width: 100%;
+  }
   .home-main-left img {
+    top: 124px;
     width: 94%;
   }
 }
@@ -176,5 +275,8 @@
   }
   .home-main-center-div-div {
     width: 50px;
+  }
+  .home-main-left img {
+    top: 194px;
   }
 }/*# sourceMappingURL=Home.css.map */
