--- a/sass/home/Home.scss
+++ b/sass/home/Home.scss
@@ -4,7 +4,6 @@
 }
 
 .container {
-
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -27,97 +26,175 @@
     justify-content: space-around;
     align-items: center;
     height: 100%;
-    margin: 100px 70px 0px 70px;
-
+    margin: 130px 70px 0px 70px;
     &-div {
-      padding: 60px 0 0 0;
-      &-i {
-        padding: 20px;
+      position: relative;
+      padding: 0 0 0 0;
+      width: 40px;
+      &-page {
+        animation: div 1s linear 0s 1 alternate;
+        position: absolute;
+        // padding: 60px 0 0 0;
+        top: -120px;
 
-        i {
-          font-size: 25px;
+        &-i {
+          padding: 20px;
+          i {
+            font-size: 25px;
+          }
         }
       }
     }
     &-center {
       width: 500px;
-      display: flex;
-      justify-content: space-around;
-      flex-direction: column;
+      position: relative;
       height: 300px;
-      &-div {
+      &-page {
+        width: 500px;
         display: flex;
         justify-content: space-around;
-        height: 20px;
-        align-items: center;
-        width: 300px;
+        flex-direction: column;
+        height: 300px;
+        // position: absolute;
+        top: 0px;
         &-div {
-          width: 70px;
-          height: 2px;
-          background: #272727;
+          display: flex;
+          justify-content: space-around;
+          height: 20px;
+          align-items: center;
+          width: 300px;
+
+          &-div {
+            position: absolute;
+            top: 149px;
+            left: 0px;
+            width: 70px;
+            height: 2px;
+            background: #272727;
+            animation: div_one 1s linear 1s alternate;
+          }
+          .div-p {
+            position: absolute;
+            top: 138px;
+            left: 93px;
+            margin: 0px 20px 0 0;
+            animation: div-p 1s linear 1s alternate;
+          }
         }
-        p {
-          margin: 0px 20px 0 0;
+        h1 {
+          position: absolute;
+          top: 0;
+          animation: h1 1s linear 0s alternate;
+          font-family: "Nunito", sans-serif;
+          font-size: 50px;
         }
-      }
-      h1 {
-        font-family: "Nunito", sans-serif;
-        font-size: 50px;
-      }
-      p {
-        font-family: "Nunito", sans-serif;
-        font-size: 20px;
-        // margin: 20px 0 0 0 ;
+        h2 {
+          animation: h2 1s linear 0.5s alternate;
+
+          position: absolute;
+          top: 65px;
+          font-family: "Nunito", sans-serif;
+          font-size: 20px;
+          margin: 20px 0 0 0;
+        }
+        .p {
+          animation: p 1s linear 1.5s 1 alternate;
+          position: absolute;
+          top: 160px;
+          font-family: "Nunito", sans-serif;
+          font-size: 20px;
+          margin: 20px 0 0 0;
+        }
       }
     }
+
     &-left {
       padding: 20px 0 0 0;
+
+      // animation: left 2s linear 0s 1 alternate;
+      position: relative;
+      width: 450px;
+      height: 300px;
       img {
         // border: 4px solid #0f0742;
         width: 450px;
-
+        top: 0px;
+        position: absolute;
+        animation: left 1s linear 0s 1 alternate;
+        right: 0;
         // border-radius: 54% 46% 32% 68% / 53% 50% 50% 47%;
       }
     }
   }
-  &-scroll {
-    padding: 80px 0px 0px 140px;
-    width: 100px;
-    top: 0;
-    position: relative;
-    p {
-      rotate: -90deg;
-      position: absolute;
-      top: 1px;
-      left: 110px;
-    }
-    a {
-      color: #272727;
-      position: relative;
-      top: 0;
-      left: 1px;
-
-      font-size: 25px;
-      animation: myfirst 2s linear 2s infinite alternate;
-    }
-  }
 }
-
-@keyframes myfirst {
+@keyframes div {
   0% {
-    top: 5px;
-  }
-  25% {
-    top: 10px;
+    left: -30px;
+    opacity: 0;
   }
   50% {
-    top: 20px;
+    left: 0;
+    opacity: 1;
   }
-  75% {
-    top: 10px;
+}
+@keyframes h1 {
+  0% {
+    top: -30px;
+    opacity: 0;
   }
-  100% {
-    top: 0px;
+  50% {
+    top: 0;
+    opacity: 1;
+  }
+}
+@keyframes h2 {
+  0% {
+    top: 95px;
+    opacity: 0;
+  }
+  50% {
+    top: 65px;
+    opacity: 1;
+  }
+}
+@keyframes p {
+  0% {
+    top: 180px;
+    opacity: 0;
+  }
+  50% {
+    top: 160px;
+    opacity: 1;
+  }
+}
+@keyframes div_one {
+  0% {
+    top: 169px;
+    opacity: 0;
+  }
+  50% {
+    top: 149px;
+    opacity: 1;
+  }
+}
+@keyframes div-p {
+  0% {
+    top: 159px;
+    opacity: 0;
+  }
+  50% {
+    top: 138px;
+    opacity: 1;
+  }
+}
+@keyframes left {
+  0% {
+    right: -30px;
+    opacity: 0;
+  }
+  50% {
+    right: 0;
+    opacity: 1;
   }
 }
 
@@ -131,14 +208,18 @@
   .home {
     width: 100%;
     &-main {
-      margin: 100px 70px 0px 70px;
+      margin: 100px 3% 0px 3%;
+      // &-left {
+      //   width: 50%;
+
+      // }
     }
   }
 }
 @media (max-width: 1100px) {
   .home {
     &-main {
-      margin: 100px 40px 0px 40px;
+      margin: 100px 0 0px 0;
     }
   }
 }
@@ -156,14 +237,7 @@
   .home {
     &-main {
       display: flex;
-      flex-wrap: wrap;
-      &-work{
-        
-      }
-      &-text{
-        
-      }
-      &-btn{
+      &-btn {
         margin: 40px 0 0 0;
       }
     }
@@ -172,39 +246,57 @@
 @media (max-width: 615px) {
   .home {
     &-main {
-      flex-direction: column-reverse;
-      margin: 3% 0 0 0;
-
+      margin: 100px 0 0px 0;
+      &-div {
+        top: 915px;
+        right: 87px;
+        &-page{
+          display: flex;
+        }
+      }
       &-center {
         width: 100%;
         // height: ;
+        &-page {
+          width: 100%;
+        }
+        h1 {
+          font-size: 40px;
+        }
       }
-      &-div {
-        display: flex;
-        // flex-direction: column;
-        padding: 20px 0 0 0;
+      &-left {
+        img {
+          top: 0;
+        }
       }
     }
   }
 }
-@media (max-width: 450px) {
+@media (max-width: 475px) {
   .home {
     &-main {
       &-center {
-        h1{
-          font-size: 40px;
+        height: 225px;
+        h1 {
+          font-size: 30px;
+        }
+        p {
+          font-size: 17px;
         }
         &-div {
           // width: 100%;
           &-div {
             width: 50px;
           }
+          p {
+            font-size: 15px;
+          }
         }
       }
-      &-div {
-      }
       &-left {
+        width: 100%;
         img {
+          top: 124px;
           width: 94%;
         }
       }
@@ -215,7 +307,6 @@
 @media (max-width: 300px) {
   .home {
     &-main {
-      
       &-center {
         &-div {
           width: 100%;
@@ -224,10 +315,10 @@
           }
         }
       }
-      &-div {
-      }
       &-left {
-        
+        img {
+          top: 194px;
+        }
       }
     }
   }
