--- a/sass/home/Home.css
+++ b/sass/home/Home.css
@@ -155,6 +155,9 @@
   }
 }
 @media (max-width: 1100px) {
+  .home {
+    min-height: 146vh;
+  }
   .home-main {
     margin: 100px 0 0px 0;
   }
@@ -226,6 +229,9 @@
   }
 }
 @media (max-width: 400px) {
+  .home {
+    min-height: 121vh;
+  }
   .home-main-div {
     width: 100%;
   }
