--- a/sass/home/Home.scss
+++ b/sass/home/Home.scss
@@ -167,6 +167,7 @@
 @media (max-width: 1200px) {
   .home {
     width: 100%;
+
     &-main {
       margin: 100px 3% 0px 3%;
       // &-left {
@@ -178,6 +179,7 @@
 }
 @media (max-width: 1100px) {
   .home {
+    min-height: 146vh;
     &-main {
       margin: 100px 0 0px 0;
     }
@@ -195,6 +197,7 @@
 
 @media (max-width: 900px) {
   .home {
+    
     &-main {
       display: flex;
       &-btn {
@@ -238,6 +241,7 @@
 }
 @media (max-width: 475px) {
   .home {
+   
     &-main {
       &-center {
         height: 225px;
@@ -272,6 +276,7 @@
 }
 @media (max-width: 400px) {
   .home {
+    min-height: 121vh;
     &-main {
       &-div {
         width: 100%;
@@ -282,6 +287,7 @@
 
 @media (max-width: 300px) {
   .home {
+    
     &-main {
       &-div {
         // width: 100%;
